# tw20260419

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  schemas.py  worker.Dockerfile  worker.py
_zeabur_archive_bundle_v4/: Dockerfile  README.md  UPLOAD_MANIFEST.txt  pyproject.toml  requirements-dev.txt  requirements.txt  worker.Dockerfile
adapters/: __init__.py  fundamentals.py  http_utils.py  manual_csv.py  market_calendar.py  news.py  price.py  revenue.py  unavailable.py  volume.py
data/: app.db
data/import_templates/: daily_prices.csv
docs/: api_design.md  cost_control.md  data_flow.md  data_refresh_flow.md  db_schema.md  project_structure.md  spec.md  zeabur.md  zeabur.web.env.example  zeabur.worker.env.example
scripts/: create_zeabur_archive_bundle.ps1  create_zeabur_embedded_bundle.ps1  create_zeabur_upload_bundle.ps1  create_zeabur_wheel_bundle.ps1  import_prices.py  init_db.py  run_worker.py
src/tw_stock_ai/: config.py  db.py  main.py  models.py  schemas.py  worker.py
src/tw_stock_ai.egg-info/: PKG-INFO  top_level.txt
src/tw_stock_ai/adapters/: __init__.py  base.py  fundamentals.py  http_utils.py  news.py  revenue.py
tests/: test_ai_analysis.py  test_app_settings.py  test_cost_controls.py  test_daily_report.py  test_data_refresh.py  test_db_config.py  test_manual_csv_adapter.py  test_openai_adapter.py  test_position_monitor.py  test_real_adapters.py  test_scoring.py  test_system_api.py  test_value_engine.py  test_web_ui.py
tw_stock_ai.egg-info/: SOURCES.txt  requires.txt
(+64 files in other folders)
