[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw-stock-ai"
version = "0.1.0"
description = "Taiwan stock short-term screening and portfolio tracking system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "SQLAlchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "jinja2>=3.1.5",
  "python-multipart>=0.0.20",
  "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.4",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tw_stock_ai = [
  "prompts/*.txt",
  "static/*.css",
  "templates/*.html",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
